--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "atom": ">=1.0.0 <2.0.0"
   },
   "dependencies": {
+  },
+  "deserializers": {
+    "d1-view/D1View": "deserializeD1View"
   }
 }
