--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "activationCommands": {
     "atom-workspace": "d1:toggle"
   },
-  "repository": "https://github.com/atom/d1",
+  "repository": "https://github.com/tokunaga1/d1.git",
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
