--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "d1",
   "main": "./lib/d1",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "A short description of your package",
-  "keywords": [
-  ],
+  "keywords": [],
   "activationCommands": {
     "atom-workspace": "d1:toggle"
   },
@@ -13,8 +12,7 @@
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "deserializers": {
     "d1-view/D1View": "deserializeD1View"
   }
